force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Apply_Round_Off__c.field-meta.xml
<CustomField>
    <fullName>APT_Apply_Round_Off__c</fullName>
    <description>.</description>
    <label>Apply Round Off</label>
    <length>255</length>
    <type>Text</type>
</CustomField>