force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Bundle_Name__c</fullName>
    <formula>Apttus_Proposal__Product__r.Name</formula>
    <label>Bundle Name</label>
    <type>Text</type>
</CustomField>