force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Charge_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>APT_Charge_Code_Formula__c</fullName>
    <label>Charge Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>