force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_COMPASS_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>APT_COMPASS_Quote_ID__c</fullName>
    <description>Returns the Compass Quote Id from the PSR record</description>
    <formula>Apttus_QPConfig__AttributeValueId__r.Applied_PSR__r.Compass_Quote_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COMPASS Quote ID</label>
    <type>Text</type>
</CustomField>