force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Cubic_Factor__c.field-meta.xml
<CustomField>
    <fullName>APT_Cubic_Factor__c</fullName>
    <formula>IF(
OR(TEXT( Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_Cubic_Factor__c )==null,TEXT( Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_Cubic_Factor__c )==&apos;0&apos;) &amp;&amp; NOT(ISPICKVAL(Apttus_QPConfig__AttributeValueId__r.APTS_Price_Structure__c, &apos;WINE {Z30}&apos;)) ,
&apos;Cubic Factor non-assessed, &apos;&amp;&quot;&apos;Y&apos; &quot; &amp; &apos;status to be applied, dimensions declaration needed&apos;, &apos;Cubic Factor assessed, Cubic Factor = &apos;&amp; TEXT(Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_Cubic_Factor__c ) &amp;&apos; , &apos;&amp;&quot;&apos;N&apos; &quot;&amp; &apos;status to be applied&apos;)</formula>
    <label>Cubic Factor</label>
    <type>Text</type>
</CustomField>