force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Customer_Type__c</fullName>
    <formula>TEXT(Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_PostBillPay_Customer_Type__c) /*
Apttus_QPConfig__AttributeValueId__r.APT_PostBillPay_Customer_Type__c*/</formula>
    <label>Customer  Type</label>
    <type>Text</type>
</CustomField>