force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>APT_Estimated_Revenue__c</fullName>
    <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_Estimated_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>