force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Identical_Line__c.field-meta.xml
<CustomField>
    <fullName>APT_Identical_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identical Line</label>
    <type>Checkbox</type>
</CustomField>