force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Lodgement_Zone__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement_Zone__c</fullName>
    <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_Lodgement_Zone__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lodgement Zone</label>
    <type>Text</type>
</CustomField>