force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Min_Transit_Cover_Amount_Per_Article__c.field-meta.xml
<CustomField>
    <fullName>APT_Min_Transit_Cover_Amount_Per_Article__c</fullName>
    <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_Min_Transit_Cover_Amount_Per_Article__c /*Apttus_QPConfig__AttributeValueId__r.APT_Min_Transit_Cover_Amount_Per_Article__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Transit Cover Amount Per Article</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>