force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Minimum_Monthly_Spend__c.field-meta.xml
<CustomField>
    <fullName>APT_Minimum_Monthly_Spend__c</fullName>
    <formula>Apttus_QPConfig__DerivedFromId__r.APT_Minimum_Monthly_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Monthly Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>