force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_New__c.field-meta.xml
<CustomField>
    <fullName>APT_New__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New?</label>
    <type>Checkbox</type>
</CustomField>