force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Option_Name_Without_Tier__c.field-meta.xml
<CustomField>
    <fullName>APT_Option_Name_Without_Tier__c</fullName>
    <formula>IF(ISPICKVAL( Apttus_QPConfig__LineType__c ,&quot;Option&quot;) &amp;&amp; CONTAINS( APT_Product_Name__c , &apos;Express Road&apos;),
&quot;Road Express&quot; , IF(ISPICKVAL( Apttus_QPConfig__LineType__c ,&quot;Option&quot;) &amp;&amp; CONTAINS( APT_Product_Name__c , &apos;Tier&apos;) &amp;&amp; NOT(CONTAINS( APT_Product_Name__c , &apos;Express Road&apos;)),
LEFT(APT_Product_Name__c, LEN(APT_Product_Name__c)-7) , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Name Without Tier</label>
    <type>Text</type>
</CustomField>