force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_PostBillPay_Gross_Settlement_fee__c.field-meta.xml
<CustomField>
    <fullName>APT_PostBillPay_Gross_Settlement_fee__c</fullName>
    <label>Gross Settlement Fee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>