force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Price_Structure__c.field-meta.xml
<CustomField>
    <fullName>APT_Price_Structure__c</fullName>
    <formula>Apttus_QPConfig__DerivedFromId__r.APT_Pricing_Structure__c</formula>
    <label>Price Structure</label>
    <type>Text</type>
</CustomField>