force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Process_Line_Item_RateCard_on_Update__c.field-meta.xml
<CustomField>
    <fullName>APT_Process_Line_Item_RateCard_on_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Line Item RateCard on Update</label>
    <type>Checkbox</type>
</CustomField>