force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Product_and_Price_Structure__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_and_Price_Structure__c</fullName>
    <formula>IF(AND(APT_Product_Name__c==&apos;Unaddressed Mail Services&apos;,ISPICKVAL(Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_Volume_Thresholds__c,&apos;0 - 250K&apos;)),IF(APT_New__c==false,&apos;UMS Non Contracted false&apos;,&apos;UMS Non Contracted true&apos;),
IF(AND(APT_Product_Name__c==&apos;Print Post&apos;, Apttus_QPConfig__AttributeValueId__r.APT_Non_Contracted_Rates_Printpost__c =true),IF(APT_New__c==false,&apos;PrintPost Non Contracted false&apos;,&apos;PrintPost Non Contracted true&apos;),
IF(AND(APT_Product_Name__c==&apos;eParcel&apos;,CONTAINS(APT_Price_Structure__c,&apos;WINE&apos;)),IF(APT_New__c==false,&apos;eParcel Wine false&apos;,&apos;eParcel Wine true&apos;),
IF(APT_New__c==false,IF( AND(Apttus_Proposal__Proposal__r.RecordType.Name == &apos;Amendment Quote&apos;,!ISBLANK(APT_Rate_Card_Key__c)),
APT_Product_Name__c &amp; &apos; true&apos;,APT_Product_Name__c &amp; &apos; false&apos;),APT_Product_Name__c &amp; &apos; true&apos;))))</formula>
    <label>Product and Price Structure</label>
    <type>Text</type>
</CustomField>