force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Product_Image__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_Image__c</fullName>
    <label>Product Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>