force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Service_Type_Print_Post__c.field-meta.xml
<CustomField>
    <fullName>APT_Service_Type_Print_Post__c</fullName>
    <formula>TEXT( Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__AttributeValueId__r.APT_PrintPost_Service_Type__c )/*TEXT(Apttus_QPConfig__AttributeValueId__r.APT_PrintPost_Service_Type__c)*/</formula>
    <label>Service Type Print Post</label>
    <type>Text</type>
</CustomField>