force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/APT_Zone__c.field-meta.xml
<CustomField>
    <fullName>APT_Zone__c</fullName>
    <formula>IF( APT_New__c =true &amp;&amp; APT_Price_Structure__c&lt;&gt;null,APT_Price_Structure__c+&apos; true&apos;,APT_Price_Structure__c+&apos; false&apos;)</formula>
    <label>Zone</label>
    <type>Text</type>
</CustomField>