force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__AttributeValueId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__AttributeValueId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated product attribute value</description>
    <label>Attribute Value</label>
    <referenceTo>Apttus_QPConfig__ProposalProductAttributeValue__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>ProposalLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>