force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__BaseProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__BaseProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated base product.</description>
    <label>Base Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Proposal Line Items (Base Product)</relationshipLabel>
    <relationshipName>BaseProposalLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>