force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__DerivedFromId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__DerivedFromId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the line item this was derived from</description>
    <label>Derived From</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Derived Proposal Line Items</relationshipLabel>
    <relationshipName>DerivedProposalLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>