force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__IsOptionRollupLine__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__IsOptionRollupLine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the line is an option rollup line</description>
    <label>Is Option Rollup Line</label>
    <type>Checkbox</type>
</CustomField>