force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__NetAdjustmentPercent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__NetAdjustmentPercent__c</fullName>
    <description>The net adjustment percent</description>
    <label>Net Adjustment (%)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>