force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__NetUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__NetUnitPrice__c</fullName>
    <description>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</description>
    <inlineHelpText>The net unit price for the product or service is the Unit Adjusted Price after applying the Group Adjustment %</inlineHelpText>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>