force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__OptionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__OptionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the selected option</description>
    <label>Option</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Proposal Option Line Items</relationshipLabel>
    <relationshipName>ProposalOptionLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>