force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the payment term associated with the quote/proposal</description>
    <inlineHelpText>ID of the payment term associated with the quote/proposal</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>